@@ -2,15 +2,14 @@ package immersive_aircraft.client.render.entity.renderer.utils;
 
 import com.mojang.blaze3d.vertex.PoseStack;
 import com.mojang.blaze3d.vertex.VertexConsumer;
-import immersive_aircraft.entity.VehicleEntity;
+import immersive_aircraft.client.render.entity.renderer.VehicleEntityRenderState;
 import immersive_aircraft.resources.bbmodel.*;
 import immersive_aircraft.util.Utils;
-import net.minecraft.client.renderer.MultiBufferSource;
-import net.minecraft.client.renderer.RenderType;
-import net.minecraft.client.renderer.Sheets;
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.renderer.*;
 import net.minecraft.client.renderer.texture.OverlayTexture;
 import net.minecraft.client.resources.model.Material;
-import net.minecraft.util.FastColor;
+import net.minecraft.util.ARGB;
 import net.minecraft.world.item.DyeColor;
 import net.minecraft.world.level.block.entity.BannerPatternLayers;
 import org.joml.Matrix3f;
@@ -18,38 +17,52 @@ import org.joml.Matrix4f;
 import org.joml.Vector3f;
 
 import java.util.List;
+import java.util.function.BiFunction;
 
 public class BBModelRenderer {
-    public interface VertexConsumerProvider {
-        VertexConsumer getBuffer(MultiBufferSource source, BBFaceContainer container, BBFace face);
-    }
+    public static final BiFunction<BBFaceContainer, BBFace, RenderType> DEFAULT_RENDER_TYPE = (container, face) -> container.enableCulling() ? RenderType.entityCutout(face.texture.location) : RenderType.entityCutoutNoCull(face.texture.location);
 
-    public static final VertexConsumerProvider DEFAULT_VERTEX_CONSUMER_PROVIDER = (source, container, face) -> source.getBuffer(container.enableCulling() ? RenderType.entityCutout(face.texture.location) : RenderType.entityCutoutNoCull(face.texture.location));
-
-    public static <T extends VehicleEntity> void renderModel(BBModel model, PoseStack matrixStack, MultiBufferSource vertexConsumerProvider, int light, float time, T entity, ModelPartRenderHandler<T> modelPartRenderer, float red, float green, float blue, float alpha) {
-        model.root.forEach(object -> renderObject(model, object, matrixStack, vertexConsumerProvider, light, time, entity, modelPartRenderer, red, green, blue, alpha));
+    public static <S extends VehicleEntityRenderState> void renderModel(BBModel model,
+                                                                        ModelPartRenderHandler<S> modelPartRenderHandler,
+                                                                        PoseStack matrixStack,
+                                                                        S entity,
+                                                                        SubmitNodeCollector submitNodeCollector,
+                                                                        float red,
+                                                                        float green,
+                                                                        float blue,
+                                                                        float alpha) {
+        model.root.forEach(object -> renderObject(model, object, matrixStack, entity, submitNodeCollector, modelPartRenderHandler, red, green, blue, alpha));
     }
 
     /**
      * Apply transformations, animations, and callbacks, and render the object.
      */
-    public static <T extends VehicleEntity> void renderObject(BBModel model, BBObject object, PoseStack matrixStack, MultiBufferSource vertexConsumerProvider, int light, float time, T entity, ModelPartRenderHandler<T> modelPartRenderer, float red, float green, float blue, float alpha) {
+    public static <S extends VehicleEntityRenderState> void renderObject(BBModel model,
+                                                                         BBObject object,
+                                                                         PoseStack matrixStack,
+                                                                         S entity,
+                                                                         SubmitNodeCollector submitNodeCollector,
+                                                                         ModelPartRenderHandler<S> modelPartRenderHandler,
+                                                                         float red,
+                                                                         float green,
+                                                                         float blue,
+                                                                         float alpha) {
         matrixStack.pushPose();
         matrixStack.translate(object.origin.x(), object.origin.y(), object.origin.z());
 
         // Apply animations
         if (!model.animations.isEmpty()) {
-            BBAnimation animation = model.animations.get(0);
+            BBAnimation animation = model.animations.getFirst();
             if (animation.hasAnimator(object.uuid)) {
-                Vector3f position = animation.sample(object.uuid, BBAnimator.Channel.POSITION, time);
+                Vector3f position = animation.sample(object.uuid, BBAnimator.Channel.POSITION, entity.time, entity.animationVariables);
                 position.mul(1.0f / 16.0f);
                 matrixStack.translate(position.x(), position.y(), position.z());
 
-                Vector3f rotation = animation.sample(object.uuid, BBAnimator.Channel.ROTATION, time);
+                Vector3f rotation = animation.sample(object.uuid, BBAnimator.Channel.ROTATION, entity.time, entity.animationVariables);
                 rotation.mul(1.0f / 180.0f * (float) Math.PI);
                 matrixStack.mulPose(Utils.fromXYZ(rotation));
 
-                Vector3f scale = animation.sample(object.uuid, BBAnimator.Channel.SCALE, time);
+                Vector3f scale = animation.sample(object.uuid, BBAnimator.Channel.SCALE, entity.time, entity.animationVariables);
                 matrixStack.scale(scale.x(), scale.y(), scale.z());
             }
         }
@@ -58,8 +71,8 @@ public class BBModelRenderer {
         matrixStack.mulPose(Utils.fromXYZ(object.rotation));
 
         // Apply additional, complex animations
-        if (object instanceof BBBone bone && modelPartRenderer != null) {
-            modelPartRenderer.animate(bone.name, entity, matrixStack, time);
+        if (object instanceof BBBone bone && modelPartRenderHandler != null) {
+            modelPartRenderHandler.animate(bone.name, entity, matrixStack, entity.time);
         }
 
         // The bones origin is only used during transformation
@@ -68,8 +81,8 @@ public class BBModelRenderer {
         }
 
         // Render the object
-        if (modelPartRenderer == null || !modelPartRenderer.render(object.name, model, object, vertexConsumerProvider, entity, matrixStack, light, time, modelPartRenderer)) {
-            renderObjectInner(model, object, matrixStack, vertexConsumerProvider, light, time, entity, modelPartRenderer, red, green, blue, alpha);
+        if (modelPartRenderHandler == null || !modelPartRenderHandler.render(object.name, model, object, submitNodeCollector, entity, matrixStack, modelPartRenderHandler)) {
+            renderObjectInner(model, object, matrixStack, entity, submitNodeCollector, modelPartRenderHandler, red, green, blue, alpha);
         }
 
         matrixStack.popPose();
@@ -78,40 +91,49 @@ public class BBModelRenderer {
     /**
      * Render the object without applying transformations, animations, or callbacks.
      */
-    public static <T extends VehicleEntity> void renderObjectInner(BBModel model, BBObject object, PoseStack matrixStack, MultiBufferSource vertexConsumerProvider, int light, float time, T entity, ModelPartRenderHandler<T> modelPartRenderer, float red, float green, float blue, float alpha) {
+    public static <T extends VehicleEntityRenderState> void renderObjectInner(BBModel model, BBObject object, PoseStack matrixStack, T entity, SubmitNodeCollector submitNodeCollector, ModelPartRenderHandler<T> modelPartRenderHandler, float red, float green, float blue, float alpha) {
         if (object instanceof BBFaceContainer cube) {
-            renderFaces(cube, matrixStack, vertexConsumerProvider, light, red, green, blue, alpha, modelPartRenderer == null ? DEFAULT_VERTEX_CONSUMER_PROVIDER : modelPartRenderer.getVertexConsumerProvider());
+            renderFaces(cube, matrixStack, submitNodeCollector, entity.packedLight, red, green, blue, alpha);
         } else if (object instanceof BBBone bone) {
             boolean shouldRender = bone.visibility;
             if (bone.name.equals("lod0")) {
-                shouldRender = entity.isWithinParticleRange();
+                shouldRender = entity.isWithinParticleRange;
             } else if (bone.name.equals("lod1")) {
-                shouldRender = !entity.isWithinParticleRange();
+                shouldRender = !entity.isWithinParticleRange;
             }
 
             if (shouldRender) {
-                bone.children.forEach(child -> renderObject(model, child, matrixStack, vertexConsumerProvider, light, time, entity, modelPartRenderer, red, green, blue, alpha));
+                bone.children.forEach(child -> renderObject(model, child, matrixStack, entity, submitNodeCollector, modelPartRenderHandler, red, green, blue, alpha));
             }
         }
     }
 
-    public static void renderFaces(BBFaceContainer cube, PoseStack matrixStack, MultiBufferSource source, int light, float red, float green, float blue, float alpha, VertexConsumerProvider provider) {
+    public static void renderFaces(BBFaceContainer cube, PoseStack matrixStack, SubmitNodeCollector submitNodeCollector, int light, float red, float green, float blue, float alpha) {
         PoseStack.Pose last = matrixStack.last();
         Matrix4f positionMatrix = last.pose();
         Matrix3f normalMatrix = last.normal();
         for (BBFace face : cube.getFaces()) {
-            VertexConsumer vertexConsumer = provider.getBuffer(source, cube, face);
             for (int i = 0; i < 4; i++) {
                 BBFace.BBVertex v = face.vertices[i];
                 Vector3f p = positionMatrix.transformPosition(v.x, v.y, v.z, new Vector3f());
                 Vector3f n = normalMatrix.transform(v.nx, v.ny, v.nz, new Vector3f());
-                int color = FastColor.ARGB32.colorFromFloat(alpha, red, green, blue);
-                vertexConsumer.addVertex(p.x, p.y, p.z, color, v.u, v.v, OverlayTexture.NO_OVERLAY, light, n.x, n.y, n.z);
+                int color = ARGB.colorFromFloat(alpha, red, green, blue);
+                submitNodeCollector.submitCustomGeometry(
+                        matrixStack,
+                        DEFAULT_RENDER_TYPE.apply(cube, face),
+                        (pose, vertexConsumer) ->
+                                vertexConsumer.addVertex(p.x, p.y, p.z, color, v.u, v.v, OverlayTexture.NO_OVERLAY, light, n.x, n.y, n.z));
             }
         }
     }
 
-    public static void renderBanner(BBFaceContainer cube, PoseStack matrixStack, MultiBufferSource vertexConsumers, int light, boolean isBanner, DyeColor baseColor, List<BannerPatternLayers.Layer> patterns) {
+    public static void renderBanner(BBFaceContainer cube,
+                                    PoseStack matrixStack,
+                                    SubmitNodeCollector submitNodeCollector,
+                                    int light,
+                                    boolean isBanner,
+                                    DyeColor baseColor,
+                                    List<BannerPatternLayers.Layer> patterns) {
         matrixStack.pushPose();
 
         if (cube instanceof BBObject object) {
@@ -120,60 +142,99 @@ public class BBModelRenderer {
 
         // Render the base material
         Material baseMaterial = isBanner ? Sheets.BANNER_BASE : Sheets.SHIELD_BASE;
-        renderBannerMaterial(cube, matrixStack, vertexConsumers, light, baseColor, baseMaterial);
+        renderBannerMaterial(cube, matrixStack, submitNodeCollector, light, baseColor, baseMaterial);
 
         // And the patterns
         for (BannerPatternLayers.Layer pattern : patterns) {
             Material material = isBanner ? Sheets.getBannerMaterial(pattern.pattern()) : Sheets.getShieldMaterial(pattern.pattern());
-            renderBannerMaterial(cube, matrixStack, vertexConsumers, light, pattern.color(), material);
+            renderBannerMaterial(cube, matrixStack, submitNodeCollector, light, pattern.color(), material);
         }
 
         matrixStack.popPose();
     }
 
-    private static void renderBannerMaterial(BBFaceContainer cube, PoseStack matrixStack, MultiBufferSource vertexConsumers, int light, DyeColor color, Material material) {
+    private static void renderBannerMaterial(BBFaceContainer cube, PoseStack matrixStack, SubmitNodeCollector submitNodeCollector, int light, DyeColor color, Material material) {
         int fs = color.getTextureDiffuseColor();
         float r = ((fs >> 16) & 0xFF) / 255.0f;
         float g = ((fs >> 8) & 0xFF) / 255.0f;
         float b = (fs & 0xFF) / 255.0f;
-        renderFaces(cube, matrixStack, vertexConsumers, light,
-                r, g, b, 1.0f,
-                (source, container, face) -> material.buffer(vertexConsumers, RenderType::entityNoOutline));
+        float alpha = 1.0f;
+        PoseStack.Pose last = matrixStack.last();
+        Matrix4f positionMatrix = last.pose();
+        Matrix3f normalMatrix = last.normal();
+        submitNodeCollector.submitCustomGeometry(
+                matrixStack,
+                RenderType.entityNoOutline(material.texture()),
+                (pose, vertexConsumer) -> {
+                    VertexConsumer consumer = Minecraft.getInstance().getAtlasManager().get(material).wrap(vertexConsumer);
+                    for (BBFace face : cube.getFaces()) {
+                        for (int i = 0; i < 4; i++) {
+                            BBFace.BBVertex v = face.vertices[i];
+                            Vector3f p = positionMatrix.transformPosition(v.x, v.y, v.z, new Vector3f());
+                            Vector3f n = normalMatrix.transform(v.nx, v.ny, v.nz, new Vector3f());
+                            int color1 = ARGB.colorFromFloat(alpha, r, g, b);
+                            consumer.addVertex(p.x, p.y, p.z, color1, v.u, v.v, OverlayTexture.NO_OVERLAY, light, n.x, n.y, n.z);
+                        }
+                    }
+
+        });
     }
 
-    public static void renderSailObject(BBMesh cube, PoseStack matrixStack, MultiBufferSource vertexConsumerProvider, int light, float time, float red, float green, float blue, float alpha) {
-        renderSailObject(cube, matrixStack, vertexConsumerProvider, light, time, red, green, blue, alpha, 0.025f, 0.0f);
+    public static void renderSailObject(BBMesh cube,
+                                        PoseStack matrixStack,
+                                        SubmitNodeCollector submitNodeCollector,
+                                        int light,
+                                        float time,
+                                        float red,
+                                        float green,
+                                        float blue,
+                                        float alpha) {
+        renderSailObject(cube, matrixStack, submitNodeCollector, light, time, red, green, blue, alpha, 0.025f, 0.0f);
     }
 
-    public static void renderSailObject(BBMesh cube, PoseStack matrixStack, MultiBufferSource vertexConsumerProvider, int light, float time, float red, float green, float blue, float alpha, float distanceScale, float baseScale) {
+    public static void renderSailObject(BBMesh cube,
+                                        PoseStack matrixStack,
+                                        SubmitNodeCollector submitNodeCollector,
+                                        int light,
+                                        float time,
+                                        float red,
+                                        float green,
+                                        float blue,
+                                        float alpha,
+                                        float distanceScale,
+                                        float baseScale) {
         PoseStack.Pose last = matrixStack.last();
         Matrix4f positionMatrix = last.pose();
         Matrix3f normalMatrix = last.normal();
         for (BBFace face : cube.getFaces()) {
-            VertexConsumer vertexConsumer = vertexConsumerProvider.getBuffer(RenderType.entityCutoutNoCull(face.texture.location));
-            for (int i = 0; i < 4; i++) {
-                BBFace.BBVertex v = face.vertices[i];
-                float distance = Math.max(
-                        Math.max(
-                                Math.abs(v.x),
-                                Math.abs(v.y)
-                        ),
-                        Math.abs(v.z)
-                );
-                double angle = (v.x + v.z + v.y * 0.25) * 4.0f + time * 4.0f;
-                double scale = distanceScale * distance + baseScale;
-                float x = (float) ((Math.cos(angle) + Math.cos(angle * 1.7)) * scale);
-                float z = (float) ((Math.sin(angle) + Math.sin(angle * 1.7)) * scale);
-                Vector3f n = normalMatrix.transform(v.nx, v.ny, v.nz, new Vector3f());
+            submitNodeCollector.submitCustomGeometry(matrixStack,
+                    RenderType.entityCutoutNoCull(face.texture.location),
+                    (pose, vertexConsumer) -> {
+                        for (int i = 0; i < 4; i++) {
+                            BBFace.BBVertex v = face.vertices[i];
+                            float distance = Math.max(
+                                    Math.max(
+                                            Math.abs(v.x),
+                                            Math.abs(v.y)
+                                    ),
+                                    Math.abs(v.z)
+                            );
+                            double angle = (v.x + v.z + v.y * 0.25) * 4.0f + time * 4.0f;
+                            double scale = distanceScale * distance + baseScale;
+                            float x = (float) ((Math.cos(angle) + Math.cos(angle * 1.7)) * scale);
+                            float z = (float) ((Math.sin(angle) + Math.sin(angle * 1.7)) * scale);
+                            Vector3f n = normalMatrix.transform(v.nx, v.ny, v.nz, new Vector3f());
 
-                vertexConsumer
-                        .addVertex(positionMatrix, v.x + x, v.y, v.z + z)
-                        .setColor(red, green, blue, alpha)
-                        .setUv(v.u, v.v)
-                        .setOverlay(OverlayTexture.NO_OVERLAY)
-                        .setLight(light)
-                        .setNormal(n.x, n.y, n.z);
-            }
+                            vertexConsumer
+                                    .addVertex(positionMatrix, v.x + x, v.y, v.z + z)
+                                    .setColor(red, green, blue, alpha)
+                                    .setUv(v.u, v.v)
+                                    .setOverlay(OverlayTexture.NO_OVERLAY)
+                                    .setLight(light)
+                                    .setNormal(n.x, n.y, n.z);
+                        }
+
+                    });
         }
     }
 }
